[fixed My Wish List Product not showing properly between >768px and <1023px]

--- a/app/design/frontend/Magento/blank/Magento_Wishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Wishlist/web/css/source/_module.less
@@ -53,6 +53,17 @@
         }
     }
 
+    .products-grid.wishlist {
+        .product-item {
+            margin-left: 2%;
+            padding: 5px;
+            width: calc(~'(100% - 4%) / 3');
+            &:nth-child(3n + 1) {
+                margin-left: 0;
+            }
+        }
+    }
+
     .account .table-wrapper .data.table.wishlist {
         .lib-table-bordered(
             @_table_type: horizontal
@@ -185,6 +196,8 @@
     .products-grid.wishlist {
         .product-item {
             border-bottom: 1px solid @secondary__color;
+            margin: 0;
+            width: 100%;
             &:first-child {
                 border-top: 1px solid @secondary__color;
             }
