--- a/app/design/frontend/Magento/luma/Magento_Wishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Wishlist/web/css/source/_module.less
@@ -45,6 +45,17 @@
         }
     }
 
+    .products-grid.wishlist {
+        .product-item {
+            margin-left: 2%;
+            padding: 5px;
+            width: calc(~'(100% - 4%) / 3');
+            &:nth-child(3n + 1) {
+                margin-left: 0;
+            }
+        }
+    }
+
     .account .table-wrapper .data.table.wishlist {
         .lib-table-bordered(
         @_table_type: horizontal
@@ -183,7 +194,7 @@
         }
     }
     .products-grid.wishlist {
-        .product-item-actions { 
+        .product-item-actions {
             .action {
                 &.edit,
                 &.delete {
@@ -216,7 +227,8 @@
     .products-grid.wishlist {
         .product-item {
             border-bottom: 1px solid @secondary__color;
-
+            margin: 0;
+            width: 100%;
             &:first-child {
                 border-top: 1px solid @secondary__color;
             }
@@ -253,7 +265,7 @@
                         &:last-child {
                             margin-right: 0;
                         }
-                        
+
                         &.edit,
                         &.delete {
                             margin-top: 7px;
